# MIRROR-B-OOP-400-NAN-4-1-arcade-andreas.le-tanter

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  arcade  unit_tests
.github/workflows/: chocolatine.yml
doc/: Makefile.example  example.md  example_Kickoff.md  how_to_compile_md_to_pdf
src/: main.cpp
src/CoreClass/: Core.cpp  Core.hpp  ICore.hpp
src/Engine/: Engine.cpp  Engine.hpp  IEngine.hpp
src/ErrorClass/: ErrorClass.cpp  ErrorClass.hpp
src/GameClass/: Game.cpp  Game.hpp  IGame.hpp
src/InitClass/: IInit.hpp  Init.cpp  Init.hpp
src/Loader/: DLLoader.hpp  DLLoader.tpp
src/MenuClass/: IMenu.hpp  Menu.cpp  Menu.hpp
src/ProgramEventsClass/: IProgramEvents.hpp  ProgramEvents.cpp  ProgramEvents.hpp
src/SuccessClass/: Success.cpp  Success.hpp
tests/Unit_tests/: InitClassTests.cpp
